tests/golden/fixtures/link-no-fit/expected.err
Error: no free range found for relocatable chunk in segment 'free' (len=0x2)
   ╭─[ tests/golden/fixtures/link-no-fit/input.k65:1:6 ]
   │
 1 │ func rel {
   │      ─┬─  
   │       ╰─── function 'rel' defined here
───╯
